Add jms groups option to Views serializer groups.

--- a/src/Voryx/RESTGeneratorBundle/Resources/skeleton/rest/actions/put.php.twig
+++ b/src/Voryx/RESTGeneratorBundle/Resources/skeleton/rest/actions/put.php.twig
@@ -35,7 +35,19 @@
      *
 {% endif %}
 {% endblock documentation %}
-     * @View(serializerEnableMaxDepthChecks=true)
+     * @View(
+{% if outputGroups | length %}
+     *   serializerGroups={
+    {%- for group in outputGroups -%}
+        "{{- group -}}"
+        {%- if not loop.last -%}
+            {{ ', ' }}
+        {%- endif -%}
+    {%- endfor -%}
+            },
+{% endif %}
+     *   serializerEnableMaxDepthChecks=true
+     * )
      *
      * @param Request $request
      * @param $entity
