--- a/src/Voryx/RESTGeneratorBundle/Resources/skeleton/rest/actions/post.php.twig
+++ b/src/Voryx/RESTGeneratorBundle/Resources/skeleton/rest/actions/post.php.twig
@@ -34,7 +34,20 @@
      *
 {% endif %}
 {% endblock documentation %}
-     * @View(statusCode=201, serializerEnableMaxDepthChecks=true)
+     * @View(
+{% if outputGroups | length %}
+     *   serializerGroups={
+    {%- for group in outputGroups -%}
+        "{{- group -}}"
+        {%- if not loop.last -%}
+            {{ ', ' }}
+        {%- endif -%}
+    {%- endfor -%}
+             },
+{% endif %}
+     *   statusCode=201,
+     *   serializerEnableMaxDepthChecks=true
+     * )
      *
      * @param Request $request
      *
