--- a/src/Voryx/RESTGeneratorBundle/Resources/skeleton/rest/controller.php.twig
+++ b/src/Voryx/RESTGeneratorBundle/Resources/skeleton/rest/controller.php.twig
@@ -11,14 +11,14 @@ use FOS\RestBundle\Controller\Annotations\RouteResource;
 use FOS\RestBundle\Controller\Annotations\View;
 use FOS\RestBundle\Request\ParamFetcherInterface;
 use FOS\RestBundle\View\View as FOSView;
-{% if hateoas -%}
+{% if hateoas %}
 use Hateoas\Configuration\Route;
 use Hateoas\Representation\Factory\PagerfantaFactory;
 use Hateoas\Representation\PaginatedRepresentation;
-{%- endif %}
-{% if document -%}
+{% endif %}
+{% if document %}
 use Nelmio\ApiDocBundle\Annotation\ApiDoc;
-{%- endif %}
+{% endif %}
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\ParamConverter;
 {% if 'annotation' == format -%}
 use Sensio\Bundle\FrameworkExtraBundle\Configuration\Method;
